--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,8 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    /*width: 80%;*/
-    /*height: 60px;*/
     border: none;
     outline: none;
     color: silver;
@@ -20,4 +18,8 @@
 
 .error {
     color: red;
+}
+.input:focus{
+    outline: none;
+    border: 3px solid yellow;
 }
