--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,65 +1,63 @@
 .link {
-    text-decoration: none;
-    color: yellow ;
-    margin: 10px;
+  text-decoration: none;
+  color: yellow;
+  margin: 10px;
 }
 .header {
-
 }
 .blue {
-    border-bottom:  3px solid silver;
+  border-bottom: 3px solid silver;
 }
 
 .menuWrapper {
-    display: flex;
-    align-items: center;
-    background-color: #4d5860;
-    color: #ffffff;
-    padding: 15px;
-    box-shadow: 0px 3px 5px #535354;;
+  display: flex;
+  align-items: center;
+  background-color: #4d5860;
+  color: #ffffff;
+  padding: 15px;
+  box-shadow: 0px 3px 5px #535354;
 }
 
 .burgerMenu {
-    cursor: pointer;
-    font-size: 40px;
-    color: #ffffff;
-    transition: all 0.5s;
+  cursor: pointer;
+  font-size: 40px;
+  color: #ffffff;
+  transition: all 0.5s;
 }
 
 .burgerMenu:hover {
-    color: #302e2e;
-
+  color: #302e2e;
 }
 
 .containerMenuLinks {
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.5s;
-    padding: 0;
-    margin: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+  padding: 0;
+  margin: 0;
 }
 
 .activeMenu {
-    visibility: visible;
-    opacity: 1;
-    padding: 0 55px;
-    justify-content: space-between;
-    transition: all 0.5s ease-in-out;
+  visibility: visible;
+  opacity: 1;
+  padding: 0 55px;
+  justify-content: space-between;
+  transition: all 0.5s ease-in-out;
 }
 
 .menuLinks {
-    margin-right: 10px;
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
+  margin-right: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 .menuLinks:hover {
-    color: #9f9292;
-    text-decoration: none;
+  color: #9f9292;
+  text-decoration: none;
 }
 
 .active {
-    color: #352e2e;
-    font-weight: bold;
+  color: #352e2e;
+  font-weight: bold;
 }
