--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
-body {
+* {
   box-sizing: border-box;
+}
+
+body {
   margin: 0;
   padding: 0;
+}
+
+.App {
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(152, 144, 199, 1) 0%, rgba(230, 212, 222, 1) 100%);
 }
