--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,63 +1,30 @@
-.link {
-  text-decoration: none;
-  color: yellow;
-  margin: 10px;
-}
-.header {
-}
-.blue {
-  border-bottom: 3px solid silver;
-}
-
 .menuWrapper {
-  display: flex;
-  align-items: center;
-  background-color: #4d5860;
-  color: #ffffff;
-  padding: 15px;
-  box-shadow: 0px 3px 5px #535354;
-}
-
-.burgerMenu {
-  cursor: pointer;
-  font-size: 40px;
-  color: #ffffff;
-  transition: all 0.5s;
-}
-
-.burgerMenu:hover {
-  color: #302e2e;
+  background-color: #ebe0e9;
+  padding: 0 15px;
+  height: 60px;
 }
 
 .containerMenuLinks {
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.5s;
-  padding: 0;
-  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
-.activeMenu {
-  visibility: visible;
-  opacity: 1;
-  padding: 0 55px;
-  justify-content: space-between;
-  transition: all 0.5s ease-in-out;
-}
-
-.menuLinks {
-  margin-right: 10px;
-  color: #fff;
-  text-transform: uppercase;
+.link {
   text-decoration: none;
+  color: #2d2e46;
+  padding: 0 20px;
+  border-bottom: 3px solid transparent;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transition: all 0.2s linear;
 }
 
-.menuLinks:hover {
-  color: #9f9292;
-  text-decoration: none;
-}
-
-.active {
-  color: #352e2e;
-  font-weight: bold;
+.containerMenuLinks .activeLink {
+  background: #dcccdb;
+  border-bottom: 3px solid blue;
 }
