--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,21 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  background-image: linear-gradient(0deg, rgb(152, 144, 199) 0%, rgb(230, 212, 222) 100%);
+  background-attachment: fixed;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .App {
-  height: 100vh;
+  /* background: linear-gradient(0deg, rgba(152, 144, 199, 1) 0%, rgba(230, 212, 222, 1) 100%); */
+}
+
+.container {
   padding: 0 20px;
-  background: linear-gradient(0deg, rgba(152, 144, 199, 1) 0%, rgba(230, 212, 222, 1) 100%);
+  margin-top: 20px;
 }
