--- a/src/components/registred/Registred.module.css
+++ b/src/components/registred/Registred.module.css
@@ -113,3 +113,54 @@
   }
 }
 
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  overflow-y: scroll;
+  padding: 60px 15px;
+}
+
+/*.modal_active {*/
+/*  position: fixed;*/
+/*  top: 0;*/
+/*  visibility: visible;*/
+/*  opacity: 1;*/
+/*  transition: .3s;*/
+/*}*/
+
+.closeButton {
+  float: right;
+  font-weight: bold;
+  font-size: 29px;
+  background: #ff0000;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  /*position: absolute;*/
+  right: 0;
+  top: 0;
+  background: none;
+  cursor: pointer;
+  transition: .3s;
+  outline: none;
+  cursor: pointer;
+  color: crimson;
+}
+
+.modal__close-button:hover {
+  transition: .3s;
+  transform: rotate(180deg);
+}
