--- a/src/table.module.css
+++ b/src/table.module.css
@@ -76,7 +76,7 @@
 }
 
 .table_title_card {
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .table_line {
@@ -101,8 +101,9 @@
 
 .table_body_card {
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-columns: 2fr 2fr 1fr;
   width: 100%;
+  grid-column-gap: 20px;
 }
 
 .delete {
@@ -126,6 +127,12 @@
 
 .sort_btns button {
   background: transparent;
+}
+
+.grade {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .rating {
